Added DOI from Zenodo.

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,9 +1,11 @@
+
 @misc{llodia_2024,
 	type = {dataset},
 	title = {Linguistic {Linked} {Open} {Data} for {Diachronic} {Analysis} ({LLODIA})},
 	url = {https://github.com/nexuslinguarum/LLODIA},
+	doi = {10.5281/zenodo.11065197},
 	publisher = {GitHub Nexus Linguarum},
 	author = {Armaselu, Florentina and Liebeskind, Chaya and Marongiu, Paola and McGillivray, Barbara and Valūnaitė Oleškevičienė, Giedrė and Apostol, Elena Simona and Truică, Ciprian-Octavian},
 	month = apr,
-	year = {2024}
+	year = {2024},
 }
